# ClawSeat

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  README.en.md  README.md  README.zh-CN.md  index.html  manifest.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.app.json  vite.config.ts
.scripts/: agent-admin.sh  agentctl.sh  check-engineer-status.sh  send-and-verify.sh
.tasks/: B4_AUDIT.md  PROJECT.md  ROADMAP.md  STATUS.md  TASKS.md
core/: __init__.py  _io.py  bootstrap_receipt.py  harness_adapter.py  preflight.py  resolve.py  skill_registry.py  skill_registry.toml  transport.py
design/: followups-after-m1.md  phase-7-retire.md
docs/: API.md  ARCHITECTURE.md  CANONICAL-FLOW.md  CHALLENGE_DESIGN.md  DESIGN_WORKFLOW.md  GSTACK.md  HACKING.md  INSTALL.md  INSTALL.zh-CN.md  INSTALL_AGENT_PROMPT.md  INSTALL_AGENT_PROMPT.zh-CN.md  INSTALL_GUIDE.md  INTERACTIONS.md  ITERM_TMUX_REFERENCE.md  OPENCLAW.md  PACKAGING.md  PHYSICS.md  POST_INSTALL.md  README.md  RUNTIME_ENV.md  TEAM-INSTANTIATION-PLAN.md  VARIANT_AESTHETIC.md  auth-modes.md  resume-protocol.md
scripts/: ancestor-brief-mtime-check.sh  apply-koder-overlay.sh  clawseat-update-projects.sh  clean-slate.sh  cleanup-stale-memories-window.sh  com.clawseat.task-watch.plist  env_scan.py  install.sh  install_multi.sh  launch-grid.sh  launch_ancestor.sh  migrate-qa-to-patrol.sh  migrate-workspace-memory.sh  migrate_kb_singular.py  recover-grid.sh  restart-seat.sh  task-watch.sh  test-suite-audit.py  wait-for-seat.sh
shells/: README.md
src/: App.css  App.tsx  index.css
(+1293 files in other folders)
